# diff_canopen_system

./: CMakeLists.txt  README.md  diff_canopen_system.xml  package.xml  rpm_powertrain_driver.xml  stack.txt
config/custom_mapping_canopen_system/: bus.yml  ros2_controllers.yaml
config/fake_diff_drive_system/: bus.yml  ros2_controllers.yaml  sample.eds
config/fake_rpm_system/: bus.yml  inverter.eds  ros2_controllers.yaml
config/mav1500/: EDS_20014_Standard_CANopen_V212_01.eds  bus.yml  ros2_controllers.yaml  sample_can_data.txt  stack_ros.txt
include/diff_canopen_system/: DiffCanopenSystem.hpp  DiffCanopenSystemAbstractPDOMapping.hpp  DiffCanopenSystemMultipRPDO.hpp  custom_mapping_canopen_system.hpp  diff_canopen_system.hpp  diff_canopen_system_abstract_pdo_mapping.hpp  diff_canopen_system_multi_rpdo.hpp  visibility_control.h
include/fake_canopen/: fake_inverter.hpp  fake_motor_controller.hpp
include/rpm_powertrain_driver/: rpm_powertrain_diff_canopen_system.hpp
launch/: diff_canopen_system.launch.py  fake_diff_drive_system.launch.py  fake_diff_drive_system.launch.xml  fake_inverter.launch.py  fake_motor_controller.launch.py  fake_rpm_system.launch.py  mav1500_drive_system.launch.xml  test_diff_canopen_system.launch.py
ros2_control_config/: mobile_base_ros2_control.yaml  ros2_controllers.yaml  rpm_ros2_controllers.yaml
src/: DiffCanopenSystem.cpp  DiffCanopenSystemAbstractPDOMapping.cpp  DiffCanopenSystemMultiRPDO.cpp  custom_mapping_canopen_system.cpp  diff_canopen_system.cpp  diff_canopen_system_abstract_pdo_mapping.cpp  diff_canopen_system_multi_rpdo.cpp  rpm_powertrain_diff_canopen_system.cpp
src/fake_canopen/: fake_inverter.cpp  fake_motor_controller.cpp
test/: test_DiffCanopenSystem.cpp
urdf/: canopen_system.ros2_control.xacro  diff_canopen_system.ros2_control.xacro  diff_canopen_system.urdf.xacro  mav1500.urdf.xacro  test_diff_canopen_system.ros2_control.xacro  test_diff_canopen_system.urdf.xacro
urdf/fake_diff_drive_system/: fake_diff_drive_system.ros2_control.xacro  fake_diff_drive_system.urdf.xacro
urdf/fake_rpm_system/: fake_inverter.urdf.xacro  fake_rpm_system.ros2_control.xacro  fake_rpm_system.urdf.xacro
urdf/mav1500/: mav1500.ros2_control.xacro  mav1500_new.ros2_control.xacro  mav1500_raw_canopen.ros2_control.xacro
