<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diff_canopen_system</name>
  <version>0.3.0</version>
  <description>A package for differential drive using ros2_canopen.</description>
  <maintainer email="denis.stogl@b-robotized.com">Dr. Denis Stogl</maintainer>
  <maintainer email="xi.huang@stoglrobotics.de">Xi Huang</maintainer>
  <license>Propriatary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>lely_core_libraries</build_depend>
  <build_depend>ros2_control_cmake</build_depend>

  <depend>canopen_fake_slaves</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>canopen_ros2_control</depend>

  <exec_depend>canopen_core</exec_depend>
  <exec_depend>canopen_proxy_driver</exec_depend>
  <exec_depend>canopen_master_driver</exec_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>canopen_ros2_controllers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
